<resources>
    <string name="app_name">PFA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="es_string_transaction_amount">Incoming/expanses</string>
    <string name="es_string_description">Description</string>
    <string name="es_string_date_button">Date</string>
    <string name="es_string_button_store">Store!</string>
    <string name="es_string_button_clear">Clear</string>
    <string name="es_string_action_data_overview_screen">Overview</string>
    <string name="es_string_action_entering_screen">Entering Screen</string>
    <string name="es_string_action_analytic_screen_search">Analysis</string>
    <string name="ass_string_from">from</string>
    <string name="ass_string_to">to</string>
    <string name="ass_string_ok_button">OK</string>
    <string name="asr_string_overall_sum">Overall sum</string>
    <string name="es_title">Entering Screen</string>
    <string name="os_title">Overview Screen</string>
    <string name="ass_title">Analytic Screen</string>
    <string name="asr_title">Analytic Result Screen</string>
    <string name="asrm_title">Analytic Result Monthly Screen</string>
    <string name="spinner_manage_category">Manage categories</string>


    <string-array name="category_array">
        <item>Other</item>
        <item>Car</item>
        <item>Food</item>
        <item>Sport</item>
        <item>Work</item>
        <item>Living</item>
    </string-array>

</resources>
