<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ass_from"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/ass_string_from"
        android:editable="false" />

    <TextView
        android:id="@+id/date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="   today   "
        android:textColor="@android:color/darker_gray"
        android:textSize="28sp"
        android:layout_below="@+id/ass_from"
        android:layout_alignLeft="@+id/ass_ok_button"
        android:layout_alignStart="@+id/ass_ok_button"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ass_to"
        android:layout_marginTop="55dp"
        android:text="@string/ass_string_to"
        android:layout_below="@+id/ass_from"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"  />

    <TextView
        android:id="@+id/date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="   today   "
        android:textColor="@android:color/darker_gray"
        android:textSize="28sp"
        android:layout_alignBottom="@+id/ass_datepicker_to"
        android:layout_alignLeft="@+id/date_from"
        android:layout_alignStart="@+id/date_from" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ass_string_ok_button"
        android:id="@+id/ass_ok_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />

    <ImageView
        android:id="@+id/ass_datepicker_from"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/calendar"
        android:layout_alignTop="@+id/date_from"
        android:layout_toRightOf="@+id/ass_from"
        android:layout_toEndOf="@+id/ass_from" />

    <ImageView
        android:id="@+id/ass_datepicker_to"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/calendar"
        android:layout_below="@+id/ass_to"
        android:layout_alignLeft="@+id/ass_datepicker_from"
        android:layout_alignStart="@+id/ass_datepicker_from" />

</RelativeLayout>
