<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/es"
    android:orientation="vertical">

    <TableLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/es_transaction_amount"
                android:layout_marginTop="10dp"
                android:text="@string/es_string_transaction_amount"
                android:textColor="@color/text"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/es_image_button"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="12"
                android:id="@+id/es_input_transaction_amount"
                android:maxLines="1"
                android:textColor="@color/text"
                android:layout_gravity="end"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/es_description"
                android:layout_marginTop="10dp"
                android:text="@string/es_string_description"
                android:textColor="@color/text"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="12"
                android:id="@+id/es_input_description"
                android:maxLines="1"
                android:textColor="@color/text"
                android:layout_gravity="end"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/es_datepicker"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/calendar"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   today   "
                android:textColor="@color/text"
                android:textSize="28sp"
                android:paddingTop="15dp"
                android:gravity="center"/>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:layout_gravity="center_horizontal">

            <Spinner
                android:id="@+id/es_category_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:textColor="@color/text"
                android:layout_span="2"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/es_string_button_clear"
            android:id="@+id/es_button_clear"
            android:textColor="@color/text"
            android:background="@color/button"
            android:layout_marginRight="30dp"
            android:minWidth="100dp"
            android:minHeight="100dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/es_string_button_store"
            android:id="@+id/es_button_store"
            android:textColor="@color/text"
            android:background="@color/button"
            android:layout_marginLeft="30dp"
            android:minWidth="100dp"
            android:minHeight="100dp"/>

    </LinearLayout>
</LinearLayout>